# dockerised-python-package

./: Dockerfile  Makefile  README.md  pyproject.toml
ball_pass/: __main__.py  construct.py  solve.py
input_files/: example.txt  linear.txt
tests/: conftest.py  test_construct.py  test_solve.py
