[tool.poetry]
name = "ball-pass"
version = "0.1.0"
description = ""
authors = ["Leo Browning <leobrowning92@gmail.com>"]
packages = [{include = "ball_pass"}]

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.1"
black = {extras = ["jupyter"], version = "^23.3.0"}
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "tests",
]
